base/authority/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authority
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - authority.dev.5minds.cloud
    secretName: authority-ingress-tls
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authority
                port:
                  number: 11560
